// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks component should render a title, create and sort controls, and an empty list when tasks are empty 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-start align-items-center"
  >
    <div>
      <h1>
        Tasks
      </h1>
    </div>
    <div
      className="ml-3"
    >
      <Sorter
        disabled={false}
        setTasks={[Function]}
      />
    </div>
  </div>
  <ListGroup
    className="mb-3"
    horizontal={null}
    variant={null}
  >
    <BlankItem />
  </ListGroup>
  <CreateButton
    disabled={false}
    setTasks={[Function]}
  >
    Add new task
  </CreateButton>
</Fragment>
`;

exports[`Tasks component should render a title, create and sort controls, and the list of tasks when available 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-start align-items-center"
  >
    <div>
      <h1>
        Tasks
      </h1>
    </div>
    <div
      className="ml-3"
    >
      <Sorter
        disabled={false}
        setTasks={[Function]}
      />
    </div>
  </div>
  <ListGroup
    className="mb-3"
    horizontal={null}
    variant={null}
  >
    <TaskItem
      key="2"
      setTasks={[Function]}
      task={
        Object {
          "description": "Task 1",
          "due_date": "2020-05-22",
          "id": 2,
          "is_completed": false,
          "priority": 0,
          "selected": false,
        }
      }
    />
  </ListGroup>
  <CreateButton
    disabled={false}
    setTasks={[Function]}
  >
    Add new task
  </CreateButton>
</Fragment>
`;

exports[`Tasks component should render a title, disabled create and sort controls, and the list as loading while list is undefined 1`] = `
<Fragment>
  <div
    className="d-flex justify-content-start align-items-center"
  >
    <div>
      <h1>
        Tasks
      </h1>
    </div>
    <div
      className="ml-3"
    >
      <Sorter
        disabled={true}
        setTasks={[Function]}
      />
    </div>
  </div>
  <ListGroup
    className="mb-3"
    horizontal={null}
    variant={null}
  >
    <Loading />
  </ListGroup>
  <CreateButton
    disabled={true}
    setTasks={[Function]}
  >
    Add new task
  </CreateButton>
</Fragment>
`;
